for error value in matrix force recalc, fdo#59293

Change-Id: I202526bb3cf6e0f6c55913b44a15694e0794e273